// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders hover for step 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -151,11 +151,11 @@
                },
                Object {},
              ]
            }
          >
-           
+           
          </Text>
        </View>
      </View>
    </View>
  </View>"
`;

exports[`renders not me correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={null}
  testID="StepItemButton"
>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "minHeight": 80,
          "paddingLeft": 24,
          "paddingRight": 13,
          "paddingVertical": 16,
          "width": 750,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#007398",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              undefined,
            ],
          ]
        }
      >
        Receiver Name
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
        Test Step
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders type action correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="StepItemButton"
>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "minHeight": 80,
          "paddingLeft": 24,
          "paddingRight": 13,
          "paddingVertical": 16,
          "width": 750,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#007398",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              undefined,
            ],
          ]
        }
      >
        Receiver Name
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
        Test Step
      </Text>
    </View>
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="StepItemIconButton"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 0,
            "transform": Array [
              Object {
                "translateX": 100,
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "color": "#52C5DC",
                    "fontSize": 35,
                    "padding": 10,
                  },
                  undefined,
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`renders type contact correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="StepItemButton"
>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "minHeight": 80,
          "paddingLeft": 24,
          "paddingRight": 13,
          "paddingVertical": 16,
          "width": 750,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
        Test Step
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders type reminder correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "rgb(183, 231, 240)",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
    }
  }
  testID="StepItemButton"
>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "minHeight": 80,
          "paddingLeft": 24,
          "paddingRight": 13,
          "paddingVertical": 16,
          "width": 750,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#007398",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              undefined,
            ],
          ]
        }
      >
        Receiver Name
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
        Test Step
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders type swipeable correctly 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="StepItemButton"
>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "minHeight": 80,
          "paddingLeft": 24,
          "paddingRight": 13,
          "paddingVertical": 16,
          "width": 750,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#007398",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              undefined,
            ],
          ]
        }
      >
        Receiver Name
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
        Test Step
      </Text>
    </View>
  </View>
</View>
`;

exports[`step item animations changes animation to fade out 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -109,14 +109,14 @@
        <View
          style={
            Object {
              \\"alignItems\\": \\"center\\",
              \\"justifyContent\\": \\"center\\",
-             \\"opacity\\": 0,
+             \\"opacity\\": 1,
              \\"transform\\": Array [
                Object {
-                 \\"translateX\\": 100,
+                 \\"translateX\\": 0,
                },
              ],
            }
          }
        >"
`;

exports[`step item animations renders animation fade in 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -86,7 +86,76 @@
          }
        >
          Test Step
        </Text>
      </View>
+     <View
+       accessible={true}
+       clickable={true}
+       isTVSelectable={true}
+       onClick={[Function bound touchableHandlePress]}
+       onResponderGrant={[Function bound touchableHandleResponderGrant]}
+       onResponderMove={[Function bound touchableHandleResponderMove]}
+       onResponderRelease={[Function bound touchableHandleResponderRelease]}
+       onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
+       onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
+       style={
+         Object {
+           \\"opacity\\": 1,
+         }
+       }
+       testID=\\"StepItemIconButton\\"
+     >
+       <View
+         style={
+           Object {
+             \\"alignItems\\": \\"center\\",
+             \\"justifyContent\\": \\"center\\",
+             \\"opacity\\": 0,
+             \\"transform\\": Array [
+               Object {
+                 \\"translateX\\": 100,
+               },
+             ],
+           }
+         }
+       >
+         <Text
+           allowFontScaling={false}
+           style={
+             Array [
+               Object {
+                 \\"color\\": undefined,
+                 \\"fontSize\\": 12,
+               },
+               Array [
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                 },
+                 Object {
+                   \\"fontSize\\": 18,
+                 },
+                 Array [
+                   Object {
+                     \\"color\\": \\"#52C5DC\\",
+                     \\"fontSize\\": 35,
+                     \\"padding\\": 10,
+                   },
+                   undefined,
+                 ],
+               ],
+               Object {
+                 \\"fontFamily\\": \\"icomoon\\",
+                 \\"fontStyle\\": \\"normal\\",
+                 \\"fontWeight\\": \\"normal\\",
+               },
+               Object {},
+             ]
+           }
+         >
+           
+         </Text>
+       </View>
+     </View>
    </View>
  </View>"
`;

exports[`step item animations renders animation fade out 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -86,7 +86,76 @@
          }
        >
          Test Step
        </Text>
      </View>
+     <View
+       accessible={true}
+       clickable={true}
+       isTVSelectable={true}
+       onClick={[Function bound touchableHandlePress]}
+       onResponderGrant={[Function bound touchableHandleResponderGrant]}
+       onResponderMove={[Function bound touchableHandleResponderMove]}
+       onResponderRelease={[Function bound touchableHandleResponderRelease]}
+       onResponderTerminate={[Function bound touchableHandleResponderTerminate]}
+       onResponderTerminationRequest={[Function bound touchableHandleResponderTerminationRequest]}
+       onStartShouldSetResponder={[Function bound touchableHandleStartShouldSetResponder]}
+       style={
+         Object {
+           \\"opacity\\": 1,
+         }
+       }
+       testID=\\"StepItemIconButton\\"
+     >
+       <View
+         style={
+           Object {
+             \\"alignItems\\": \\"center\\",
+             \\"justifyContent\\": \\"center\\",
+             \\"opacity\\": 1,
+             \\"transform\\": Array [
+               Object {
+                 \\"translateX\\": 0,
+               },
+             ],
+           }
+         }
+       >
+         <Text
+           allowFontScaling={false}
+           style={
+             Array [
+               Object {
+                 \\"color\\": undefined,
+                 \\"fontSize\\": 12,
+               },
+               Array [
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                 },
+                 Object {
+                   \\"fontSize\\": 18,
+                 },
+                 Array [
+                   Object {
+                     \\"color\\": \\"#52C5DC\\",
+                     \\"fontSize\\": 35,
+                     \\"padding\\": 10,
+                   },
+                   undefined,
+                 ],
+               ],
+               Object {
+                 \\"fontFamily\\": \\"icomoon\\",
+                 \\"fontStyle\\": \\"normal\\",
+                 \\"fontWeight\\": \\"normal\\",
+               },
+               Object {},
+             ]
+           }
+         >
+           
+         </Text>
+       </View>
+     </View>
    </View>
  </View>"
`;

exports[`step item animations renders no animation 1`] = `
<View
  accessible={true}
  clickable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
    }
  }
  testID="StepItemButton"
>
  <View
    style={
      Array [
        Object {
          "marginTop": 1,
          "minHeight": 80,
          "paddingLeft": 24,
          "paddingRight": 13,
          "paddingVertical": 16,
          "width": 750,
        },
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {},
          Object {
            "flex": 1,
            "flexDirection": "column",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Array [
              Object {
                "color": "#007398",
                "fontSize": 16,
                "fontWeight": "bold",
              },
              undefined,
            ],
          ]
        }
      >
        Receiver Name
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "fontSize": 14,
            },
          ]
        }
      >
        Test Step
      </Text>
    </View>
    <View
      accessible={true}
      clickable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID="StepItemIconButton"
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "justifyContent": "center",
            "opacity": 0,
            "transform": Array [
              Object {
                "translateX": 100,
              },
            ],
          }
        }
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": undefined,
                "fontSize": 12,
              },
              Array [
                Object {
                  "color": "#ffffff",
                },
                Object {
                  "fontSize": 18,
                },
                Array [
                  Object {
                    "color": "#52C5DC",
                    "fontSize": 35,
                    "padding": 10,
                  },
                  undefined,
                ],
              ],
              Object {
                "fontFamily": "icomoon",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
